@@ -1,3 +1,11 @@
+2004-10-27  Pino Toscano <toscano.pino@tiscali.it>
+
+	* Add all the constructible regular polygons actions to
+	kigpartui.rc.
+
+	* Remove the call to KAboutData::setTranslator in kig/aboutdata.h,
+	since Scripty generate automatically the two strings.
+
 2004-10-24  Dominique Devriese  <devriese@kde.org>
 
 	* Added a few new icons from Bart Van Hove bartvanhove _at_ skynet _dot_ be
